--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,14 @@
 [tox]
 envlist=py35
 
+[flake8]
+max-line-length = 120
+
 [testenv]
 passenv = *
 commands =
     flake8
-    pylint connect
+    pylint elasticsearch
 deps =
     -rrequirements.txt
     flake8
